# cast-machine

./: .gitignore  INSTALL.md  LICENSE  META  Makefile  _tags  bench.py  bytecode.ml  casts.ml  dune  examples.gcl  fac.gcl  install.md  main.ml  main.native  makefile  myutop.ml  readme.md  reductions.ml  repl.ml  simple.gcl  test.sh  types.ml
bench/odd-even/typed/: main.gcl
bench/odd-even/untyped/: main.gcl
bench/polyadhoc/typed/: main.gcl
bench/polyadhoc/untyped/: main.gcl
bench/sieve/: main.gcl  stream.gcl
bench/sieve/ocaml/: main.cmi  main.cmo  main.ml
bench/sieve/python/: main.py
bench/sieve/typed/: main.gcl  main2.gcl  main3.gcl  stream.libgcl
bench/sieve/untyped/: main.gcl
src/: abstract.ml  benchmark.ml  bytecode.ml  casts.ml  compile.ml  dune  errors.ml  examples.ml  examples.mli  exec.cppo.ml  exec.ml  interpreter.ml  lexer.mll  old_print.ml  parser.mly  primitives.ml  print.ml  syntax.ml  test.ml  types.ml  utils.ml
tests/: bot1.gcl  cod.gcl  cod2.gcl  cod3.gcl  combinator.gcl  combinator_strict.gcl  diverging.gcl  examples.gcl  fac_cast1.gcl  factorial1.gcl  factorial2.gcl  factorial3.gcl  factorial4.gcl  factorial5.gcl  factorial6.gcl  fun1.gcl  mutual.gcl  mutual_pair.gcl  mutual_rec.gcl  mutual_rec_if.gcl  nul1.gcl  pairs1.gcl  pairs2.gcl  pairs3.gcl  pairs4.gcl  pairs5.gcl  parser1.gcl  parser2.gcl  simple2.gcl  simple3.gcl  t1.gcl  t2.gcl  t3.gcl  tailrec1.gcl  tailrec2.gcl  test.gcl
