(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
  (flags ("-la" "2" "--trace" "--explain"))
)

; add  "--trace" "--explain" to flags in order to debug


(library
    (name cast)
    (libraries threads cduce str)
    (modules parser syntax types primitives utils lexer print interpreter compile exec errors)
    (preprocess (pps ppx_deriving.show ppx_deriving.eq)))
