(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
  (flags ("-la" "2" "--explain"))
)

; add  "--trace" "--explain" to flags in order to debug


(library
    (name cast)
    (libraries threads cduce str)
    (modules parser bytecode syntax types primitives utils lexer interpreter compile exec errors)
    (preprocess (pps ppx_deriving.show ppx_deriving.eq)))
