(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
  (flags ("-la" "2" "--explain"))
)

; add  "--trace" "--explain" to flags in order to debug


(library
    (name cast)
    (libraries threads cduce)
    (modules abstract parser bytecode syntax types primitives utils lexer interpreter compile exec errors))
